add route for beaxy keepalive
